# src/routers/summary.js
@@ -2,18 +2,12 @@ import { Router } from 'express';
 import { authenticate } from '../middlewares/authenticate.js';
 import { checkUser } from '../middlewares/checkUser.js';
 import { ctrlWrapper } from '../utils/ctrlWrapper.js';
-import { isValidId } from '../middlewares/isValidId.js';
 import { getSummaryController } from '../controllers/transactions.js';
 
 const router = Router();
 
 router.use(authenticate);
 
-router.get(
-  '/:period',
-  checkUser(),
-  isValidId,
-  ctrlWrapper(getSummaryController),
-);
+router.get('/:period', checkUser(), ctrlWrapper(getSummaryController));
 
 export default router;
